feat: implement location searching

--- a/src/template.html
+++ b/src/template.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <input type="text" name="" id="location" placeholder="Enter City">
-        <button id="search">Search</button>
+      <input type="text" name="" id="location" placeholder="Enter City" />
+      <button id="search">Search</button>
     </div>
     <div class="card">
-        
+      <h3 id="city">City Name</h3>
+      <div class="card-main">
+        <img id="main-icon" alt="">
+        <div></div>
+      </div>
+      <div class="card-bottom"></div>
     </div>
-    
-</body>
+    <div>
+
+    </div>
+  </body>
 </html>
